fix: Java 17 兼容性问题修复
- network 模块添加 JavaFX 依赖
- Thread.ofVirtual() 替换为 new Thread() (Java 17 兼容)
- java.datagram.* 替换为 java.net.*
- P2PConnection 改为 non-static inner class
- AWT Clipboard 替换为 JavaFX Clipboard
- 添加 UTF-8 编码配置
- 创建缺失的 CreatorController 和 CreatorView